# AtosPraksa

./: DominikMajdandžić_Zadatci_RazvojniInzenjer.docx
CMake/zadatak1/: main.cpp
CMake/zadatak2/include/Professor/: Professor.h
CMake/zadatak2/include/Student/: Student.h
CMake/zadatak2/src/: Professor.cpp  Student.cpp
CMake/zadatak3/include/Professor/: Professor.h
CMake/zadatak4/: CMakeLists.txt  main.cpp
CMake/zadatak5/: CMakeLists.txt
CMake/zadatak5/src/: Professor.cpp
CMake/zadatak6/: CMakeLists.txt
CMake/zadatak6/include/Student/: Student.h
CMake/zadatak7/: CMakeLists.txt
CMake/zadatak7/Professor/: CMakeLists.txt
CMake/zadatak7/Student/: CMakeLists.txt
CMake/zadatak7/src/: main.cpp
PripremaPrakse DominikMajdandzic/.metadata/: version.ini
PripremaPrakse DominikMajdandzic/.metadata/.plugins/org.eclipse.core.resources/: 2.snap  6.snap
PripremaPrakse DominikMajdandzic/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
PripremaPrakse DominikMajdandzic/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
PripremaPrakse DominikMajdandzic/PripremaPrakse DominikMajdandzic/: .project
PripremaPrakse DominikMajdandzic/PripremaPrakse DominikMajdandzic/tasks/: z1.txt  z4.txt
PripremaPrakse DominikMajdandzic/PripremaPrakse DominikMajdandzic/workers/: 35353.txt  646466.txt
PripremaPrakse DominikMajdandzic/resources/: config.properties
PripremaPrakse DominikMajdandzic/tasks/: z2.txt  z3.txt
PripremaPrakse DominikMajdandzic/workers/: 2320934.txt  2392942.txt  644664.txt
(+55 files in other folders)
