cmake_minimum_required(VERSION 3.10)
project(zadatak6)
find_library(Student shared imported lib/libStudent.so)
find_library(Professor shared imported lib/libProfessor.so)
add_executable(zadatak6 src/main.cpp)
target_include_directories(zadatak6 PUBLIC include)
target_link_directories(zadatak6 PUBLIC lib)
target_link_libraries(zadatak6 PUBLIC Student Professor)
